create orders component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -81,3 +81,11 @@ ul {
   .tab-name{
     font-size: 150%;
   }
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  .sticky + .content {
+    padding-top: 60px;
+  }
