--- a/src/app/modules/homePage/home-page/home-page.component.html
+++ b/src/app/modules/homePage/home-page/home-page.component.html
@@ -15,7 +15,7 @@
 </body>
 </html> -->
 
-
+<!-- 
 <mat-icon>account_circle</mat-icon>  
 <br>
 <mat-icon> person_pin</mat-icon>
@@ -59,4 +59,4 @@
     <mat-icon>notifications_off</mat-icon>
     <span>Disable alerts</span>
   </button>
-</mat-menu>
+</mat-menu> -->
