--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,87 +1,7 @@
-elements
-body{
-    /* background-image: url('src/imgs/hotel-room.jpg'); */
-    background-size: cover;
-    position: fixed;
-    width: 100%;
-}
 
 
-
-/* classes */
-.tabs{
-    text-align: left;
-    background-color: white;
-    /* color: rgb(141,194, 249); */
-    width: 100%;
-    height: 7%;
-    position:fixed;
-    top: 5%;
-    opacity: 0.5;
-}
-
-.router-outlet-component{
-    background-color: white;
-    opacity: 0.9;
-    width: 90%;
-    height: 82%;
-    position: fixed;
-    top:15%;
-    left:5%;
-}
-
-
-
-.bi-person-circle{
-    text-align: center;
-}
-
-.mat-icon{
-    font-size: 150%;
-    color: white;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: right;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    /* background-color:  #000; */
-    color: #000;
-  }
-  
-  .active {
-    background-color: rgb(141,194, 249);
+  .router{
+      margin: 125px 5% 5px;
   }
 
  
-
- 
-
-  .tab-name{
-    font-size: 150%;
-  }
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
-  .sticky + .content {
-    padding-top: 60px;
-  }
