--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,9 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-html, body { height: 100%; }
+html, body { height: 100%; 
+    /* width: 90%;
+    margin: auto;*/
+    /* margin: 125px 5% 5px; */
+} 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
