change size of mat dialog

--- a/src/app/modules/customer/customer-list/customer-list.component.css
+++ b/src/app/modules/customer/customer-list/customer-list.component.css
@@ -15,6 +15,11 @@
 .demo-row-is-clicked {
   font-weight: bold;
 }
+
+
+.demo-row-is-clicked {
+  font-weight: bold;
+}
 table {
   width: 1150px;
 }
