--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
-    <app-menu></app-menu>
-     
+    <div *ngIf="_authorized">
+     <app-menu ></app-menu>
      <div class="router">
       <router-outlet></router-outlet>
     </div> 
-    <!-- <router-outlet></router-outlet> -->
+  </div>
+    <router-outlet></router-outlet>
