--- a/src/app/modules/orders/orders-list/orders.component.html
+++ b/src/app/modules/orders/orders-list/orders.component.html
@@ -1,5 +1,65 @@
-<p>orders works!</p>
+<!-- <p>orders works!</p>
 <mat-icon> message</mat-icon>
 <mat-icon>today</mat-icon>
 <mat-icon>search</mat-icon>
-<mat-icon>home</mat-icon>
+<mat-icon>home</mat-icon> -->
+
+<div class="mat-elevation-z8 demo-table">
+    <table mat-table [dataSource]="ordersList"  
+    class="mat-elevation-z8" >
+    <!-- matSort (matSortChange)="sortData($event)" -->
+      <!-- (matSortChange)="announceSortChange($event)" -->
+  
+      <!-- FirstName Column -->
+      <ng-container matColumnDef="checkInDate">
+        <th mat-header-cell *matHeaderCellDef > Check In Date</th>
+        <!-- sortActionDescription="Sort by firstname" -->
+        <td mat-cell *matCellDef="let element"> {{element.checkInDate}} </td>
+      </ng-container>
+  
+      <!-- LastName Column -->
+      <ng-container matColumnDef="checkOutDate">
+        <th mat-header-cell *matHeaderCellDef> check Out Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.checkOutDate}} </td>
+      </ng-container>
+  
+      <!-- EmailAddress Column -->
+      <ng-container matColumnDef="totalPrice">
+        <th mat-header-cell *matHeaderCellDef> Total Price </th>
+        <td mat-cell *matCellDef="let element"> {{element.totalPrice}} </td>
+      </ng-container>
+  
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="costPrice">
+        <th mat-header-cell *matHeaderCellDef>Cost Price</th>
+        <td mat-cell *matCellDef="let element"> {{element.costPrice}} </td>
+      </ng-container>
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="numOfAdults">
+        <th mat-header-cell *matHeaderCellDef> Num Of Adults </th>
+        <td mat-cell *matCellDef="let element"> {{element.numOfAdults}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="numOfKids">
+        <th mat-header-cell *matHeaderCellDef> Num Of Kids </th>
+        <td mat-cell *matCellDef="let element"> {{element.numOfKids}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="hotelName">
+        <th mat-header-cell *matHeaderCellDef> Hotel Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.hotelName}} </td>
+      </ng-container>
+
+      <td>
+      <div class="example-button-container">
+        <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
+      </td>
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+      <!-- (dblclick)="getCustomerDetails(row.id)" -->
+     <!--  -->
+    </table>
+<!-- <button (click)="getTheLastOrders()">Get All Orders</button> -->
