--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -14,6 +14,31 @@
     </mat-autocomplete>
   </mat-form-field>
 </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Document</title>
+</head>
+<body>
+  <form>
+    <mat-form-field  appearance="fill">
+      <mat-label>הכנס את שם הלקוח</mat-label>
+      <input type="text"
+             placeholder="שם מלא"
+             matInput
+             [formControl]="myControl"
+             [matAutocomplete]="auto"  #name>
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+          {{option}}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <!-- <button (click)="findCustomer(name.value)">חיפוש</button> -->
+  </form>
+</body>
+</html>
+
 
 
 
