--- a/src/app/modules/orders/order-card/order-card.component.css
+++ b/src/app/modules/orders/order-card/order-card.component.css
@@ -5,9 +5,9 @@
     border-radius: 6px;
 }
 
-.mat-icon{
+/* .mat-icon{
     font-size: 200%;
-}
+} */
 
 .mat-form-field{
     background-color: white;
@@ -65,6 +65,7 @@ margin-left: 2%;
 
   .btn {
     font-size: 1vw;
+    margin-right: 2%;
 }
 .example-form-field {
     margin-right: 20px;
