--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -26,6 +26,22 @@
         </mat-select>
         </mat-autocomplete>
       </mat-form-field>
+      
+      <mat-form-field  class="name-filed" appearance="fill">
+        <mat-label> שם מלון</mat-label>
+        <input type="text"
+            placeholder="שם מלון"
+               matInput
+               [formControl]="hotelName1"
+               [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" >
+          <mat-select [formControl]="hotelName1">
+          <mat-option *ngFor="let option1 of hotelsOption| async" [value]="option1">
+            {{option1}}
+          </mat-option>
+        </mat-select>
+        </mat-autocomplete>
+      </mat-form-field>
   <!-- <mat-form-field class="name-filed" appearance="fill">
     <mat-label><mat-icon>person</mat-icon> שם מלא של הלקוח</mat-label>
     <input matInput formControlName="customerName">
