--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -41,7 +41,7 @@
   </mat-date-range-picker>
 </mat-form-field>
 
-
+<input matinput type="datetime">
    
     <br>
     <mat-form-field appearance="fill">
