--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
-    <div *ngIf="_authorized">
+    <!-- <div *ngIf="_authorized"> -->
      <app-menu ></app-menu>
      <div class="router">
       <router-outlet></router-outlet>
     </div> 
-  </div>
+  <!-- </div> -->
     <router-outlet></router-outlet>
