fix order and calendar dialog and add function to calendar controller

--- a/src/app/modules/Calendar/calendar/calendar.component.html
+++ b/src/app/modules/Calendar/calendar/calendar.component.html
@@ -1,3 +1,5 @@
 <p>calendar works!</p>
 <button (click)="toggleWeekends()">toggle weekends</button>
-<full-calendar [options]="calendarOptions"></full-calendar>
+<full-calendar #calendar [options]="calendarOptions">
+    <!-- <button title="Week">week</button> -->
+</full-calendar>
