--- a/src/app/modules/customer/customer-dialog/customer-dialog.component.html
+++ b/src/app/modules/customer/customer-dialog/customer-dialog.component.html
@@ -1,1 +1,2 @@
-<app-customer-card [customerID]="customerID"></app-customer-card>
+<button (click)="onCloseBtnClicked()">X</button>
+<app-customer-card [customerID]="customerID" (onCustomeBtnClikced)="onCustomeBtnClikced()"></app-customer-card>
