--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 
+
     <div *ngIf="_authorized">
-     <app-menu ></app-menu>
+     <app-menu class="nav"></app-menu>
      <div class="router">
       <router-outlet></router-outlet>
     </div> 
