--- a/src/app/modules/customer/customer-card/customer-card.component.html
+++ b/src/app/modules/customer/customer-card/customer-card.component.html
@@ -290,42 +290,37 @@
       <h1>הזמנות</h1>
       <div class="mat-elevation-z8 demo-table">
         <table mat-table [dataSource]="ordersList"  
-        class="mat-elevation-z8" >
-        <!-- matSort (matSortChange)="sortData($event)" -->
-          <!-- (matSortChange)="announceSortChange($event)" -->
-      
+        class="mat-elevation-z8" > 
     
           <!-- checkin Column -->
-          <ng-container matColumnDef="checkInDate">
-            <th mat-header-cell *matHeaderCellDef > Check In Date</th>
+           <ng-container matColumnDef="checkInDate">
+            <th mat-header-cell *matHeaderCellDef > Check In Date</th> 
             <!-- sortActionDescription="Sort by firstname" -->
-            <td mat-cell *matCellDef="let element"> {{element.checkInDate}} </td>
+             <td mat-cell *matCellDef="let element"> {{element.checkInDate}} </td>
           </ng-container>
-      
+
           <!-- checkout Column -->
-          <ng-container matColumnDef="checkOutDate">
+         <ng-container matColumnDef="checkOutDate">
             <th mat-header-cell *matHeaderCellDef> check Out Date </th>
             <td mat-cell *matCellDef="let element"> {{element.checkOutDate}} </td>
           </ng-container>
-      
           <!-- EmailAddress Column -->
-          <ng-container matColumnDef="totalPrice">
+           <ng-container matColumnDef="totalPrice">
             <th mat-header-cell *matHeaderCellDef> Total Price </th>
             <td mat-cell *matCellDef="let element"> {{element.totalPrice}} </td>
           </ng-container>
-      
           <!-- Symbol Column -->
-          <ng-container matColumnDef="costPrice">
+           <ng-container matColumnDef="costPrice">
             <th mat-header-cell *matHeaderCellDef>Cost Price</th>
             <td mat-cell *matCellDef="let element"> {{element.costPrice}} </td>
           </ng-container>
           <!-- Symbol Column -->
-          <ng-container matColumnDef="numOfAdults">
+           <ng-container matColumnDef="numOfAdults">
             <th mat-header-cell *matHeaderCellDef> Num Of Adults </th>
             <td mat-cell *matCellDef="let element"> {{element.numOfAdults}} </td>
-          </ng-container>
+          </ng-container> 
     
-          <ng-container matColumnDef="numOfKids">
+         <ng-container matColumnDef="numOfKids">
             <th mat-header-cell *matHeaderCellDef> Num Of Kids </th>
             <td mat-cell *matCellDef="let element"> {{element.numOfKids}} </td>
           </ng-container>
@@ -335,16 +330,10 @@
             <td mat-cell *matCellDef="let element"> {{element.hotelName}} </td>
           </ng-container>
     
-          <td>
-          <div class="example-button-container">
-            <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </div>
-          </td>
           <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-          <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
-          <!-- (dblclick)="getCustomerDetails(row.id)" -->
+          <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"(dblclick)="getOrderDetails(row.id)"></tr> 
+          
          <!--  -->
         </table>
-    </div>
+            
+          
